# grepify

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
api/server/: go.sum
api/server/db/: db.go
api/server/handlers/: domains.go
api/server/jobs/: runner.go
api/server/llm/: groq.go
api/server/sidecar/: client.go
grepify/: .env.example  .gitignore  Makefile  models.py  pyproject.toml  scraper.py  store.py
grepify/api/: sidecar.py
grepify/api/server/: go.mod  main.go
grepify/api/server/db/: queries.go  schema.sql
grepify/api/server/handlers/: collections.go  deps.go  query.go  share.go
grepify/context/: RAG-concept.md  progress1.md
grepify/grepify/: __init__.py  chunker.py  embedder.py  retriever.py  scraper.py  sentiment.py
grepify/scripts/: index.py  scrape.py  search.py
scripts/: search.py
